--- a/DatingApp-SPA/package.json
+++ b/DatingApp-SPA/package.json
@@ -20,10 +20,13 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
-    "bootstrap": "^4.1.3",
+    "@auth0/angular-jwt": "2.0.0",
+    "alertifyjs": "1.11.1",
+    "bootstrap": "4.1.3",
+    "bootswatch": "^4.1.3",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
-    "jquery": "^3.3.1",
+    "ngx-bootstrap": "3.0.1",
     "popper": "^1.0.1",
     "rxjs": "^6.0.0",
     "zone.js": "~0.8.26"
@@ -44,7 +47,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.0",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.3.0",
+    "protractor": "^5.4.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
     "typescript": "~2.7.2"
